# trajanus-enterprise-hub

./: .claude.md  .gitignore  AGENTIC_SEARCH_SKILL.md  ARCHITECTURE_PLAN_EXTRACTION_METHOD.md  Azure DevOps New Account Steps.docx  BROWSER_UNIFICATION_PLAN.md  CC_AGENT_DEPLOYMENT_TODAY.md  CHRIS_QUICK_START_GUIDE.md  CLAUDE.md  COMPLETE_BROWSER_FIX_INSTRUCTIONS.md  COMPLIANCE_OFFICER_SPEC.md  CONVERT_DOCX_TO_GDOCS.py  CONVERT_MD_TO_GDOCS_PERMANENT.py  CURRENT_TASK.md  DATABASE_ARCHITECTURE_FOR_CHRIS.md  DEVELOPER_CONFIG_REVISED.md  EXECUTIVE_SUMMARY.md  Frontend_Design_Skill.md  GENERATE_NEW_CREDENTIALS.py  GITHUB_COLLABORATION_SETUP.md  IMPLEMENTATION_GUIDE.md  INGEST_CLAUDE_CODE_VIDEOS.bat  KB_Search_GUI.pyw  LOGO_3D_TEST.html  LOST_WORK_AUDIT.md  Launch_KB_Search.bat  MASTER_DOC_IDS.txt  MASTER_RECOVERY_PLAN.md  MASTER_WORKFLOWS_COMPREHENSIVE.md  PHASE2_COMPLIANCE_OFFICER.md  PHASE3_RESEARCH_AGENT.md  PHASE4_TKB_EXPANSION.md  PLANNER_CONFIG_REVISED.md  QUICK_REFERENCE.md  QUICK_START_AGENT_DEPLOYMENT.md  README.md  RECOVERY_TRACKER.md  RESEARCH_AGENT_README.md  RESEARCH_FINDINGS_LARGE_FILE_EDITING.md  SESSION_TRANSCRIPT_2025-12-14_Responses.md  (+93 more)
.claude/: settings.json  settings.local.json
002 Agents/: CONVERT_RESEARCH_FILES.ps1  convert_research_to_gdocs.py  morning_research_agent.py  research_agent.py  research_agent_v2_gdocs_py.py  task_scheduler_setup.ps1  test_agent.py  working_agent.py
002 Documentation/: ADDING_UTILITY_BUTTONS.md  OPUS_HANDOFF.md  (+60 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+767 files in other folders)
