[package]
name = "trajanus-command-center"
version = "1.0.0"
description = "Trajanus Command Center - Construction Management Toolkit"
authors = ["Trajanus USA"]
license = ""
repository = "https://github.com/Tetra-Hydra-Cannabinol/trajanus-enterprise-hub"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "trajanus_command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-shell = "2"
